Se crea la funcionalidad para darle informacion a los artistas

--- a/clase-martes-24-agosto/index.html
+++ b/clase-martes-24-agosto/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/estilos.css">
+    <title>Artistas</title>
 </head>
 <body>
+    <div class="container">
+        <div class="artista1">
+            <button id="btn-artista1">artista1</button>
+            <p>Nombre: </p><div id='nombre1'></div>
+            <br>
+            <p>Edad: </p><div id='edad1'></div>
+            <br>
+            <p>Género: </p><div id='genero1'></div>
+        </div>
+        <div class="artista2">
+            <button id="btn-artista2">artista2</button>
+            <p>Nombre: </p><div id='nombre2'></div>
+            <br>
+            <p>Edad: </p><div id='edad2'></div>
+            <br>
+            <p>Género: </p><div id='genero2'></div>
+        </div>
+        <div class="artista3">
+            <button id="btn-artista3">artista3</button>
+            <p>Nombre: </p><div id='nombre3'></div>
+            <br>
+            <p>Edad: </p><div id='edad3'></div>
+            <br>
+            <p>Género: </p><div id='genero3'></div>
+        </div>
+    </div>
     <script src="assets/js/index.js" type="text/javascript" ></script>
 </body>
 </html>
