Se le agregan los estilos al proyecto

--- a/clase-martes-24-agosto/index.html
+++ b/clase-martes-24-agosto/index.html
@@ -7,32 +7,37 @@
     <title>Artistas</title>
 </head>
 <body>
-    <div class="container">
-        <div class="artista1">
-            <button id="btn-artista1">artista1</button>
-            <p>Nombre: </p><div id='nombre1'></div>
-            <br>
-            <p>Edad: </p><div id='edad1'></div>
-            <br>
-            <p>Género: </p><div id='genero1'></div>
+    <header>
+        <h1>TU ARTISTA FAVORITO</h1>
+    </header>
+    <main>
+        <div class="container">
+            <div class="artista1">
+                <div id="btn-artista1"><img src="./assets/image/axel.jpg" width="200" height="200" alt="guns"></div>
+                <span>Nombre: <p class="nombre" id='nombre1'></p></span>
+                <br>
+                <span>Edad: <p class="edad" id='edad1'></p></span>
+                <br>
+                <span>Género: <p class="genero" id='genero1'></p></span>
+            </div>
+            <div class="artista2">
+                <div id="btn-artista2"><img src="./assets/image/freddy.jpg"  width="200" height="200" alt="queen"></div>
+                <span>Nombre:  <p class="nombre" id='nombre2'></p></span>
+                <br>
+                <span>Edad: <p class="edad" id='edad2'></p></span>
+                <br>
+                <span>Género: <p class="genero" id='genero2'></p></span>
+            </div>
+            <div class="artista3">
+                <div id="btn-artista3"><img src="./assets/image/metalica.jpg"  width="200" height="200" alt="matallica"></div>
+                <span>Nombre: <p class="nombre" id='nombre3'></p></span>
+                <br>
+                <span>Edad: <p class="edad" id='edad3'></p></span>
+                <br>
+                <span>Género:  <p class="genero" id='genero3'></p></span>
+            </div>
         </div>
-        <div class="artista2">
-            <button id="btn-artista2">artista2</button>
-            <p>Nombre: </p><div id='nombre2'></div>
-            <br>
-            <p>Edad: </p><div id='edad2'></div>
-            <br>
-            <p>Género: </p><div id='genero2'></div>
-        </div>
-        <div class="artista3">
-            <button id="btn-artista3">artista3</button>
-            <p>Nombre: </p><div id='nombre3'></div>
-            <br>
-            <p>Edad: </p><div id='edad3'></div>
-            <br>
-            <p>Género: </p><div id='genero3'></div>
-        </div>
-    </div>
+    </main>
     <script src="assets/js/index.js" type="text/javascript" ></script>
 </body>
 </html>
