--- a/clase-miercoles-26-agosto/index.html
+++ b/clase-miercoles-26-agosto/index.html
@@ -13,14 +13,25 @@
     <main>
         <div class="container">
             <div class="inputs">
-                <input id='numero1' name='numero1' type="number">
-                <input id='numero2' name='numero2' type="number">
+                <div class="input1">
+                    <label for="numero1">Introduce el primer número:</label>
+                    <br>
+                    <input id='numero1' name='numero1' type="number">
+                </div>
+                <div class="input2">
+                    <label for="numero2">Introduce el segundo número:</label>
+                    <br>
+                    <input id='numero2' name='numero2' type="number">
+                </div>
             </div>
             <div class="buttons">
                 <button id="suma">+</button>
                 <button id="resta">-</button>
                 <button id="multiplicacion">*</button>
                 <button id="division">/</button>
+            </div>
+            <div id="historial">
+
             </div>
         </div>
     </main>
