Se construyó el formulario con las validaciones y el redireccionamiento a la calculadora

--- a/clase-miercoles-26-agosto/index.html
+++ b/clase-miercoles-26-agosto/index.html
@@ -30,10 +30,10 @@
                 <button id="multiplicacion">*</button>
                 <button id="division">/</button>
             </div>
-            <div id="historial">
-
-            </div>
         </div>
+                <div class="contenedor-historial">
+                    <ul id="historial"></ul>
+                </div>
     </main>
     <script src="./assets/js/index.js" ></script>
 </body>
