Se construye registro, perfil con todo y adición de lista de tareas por medio de un teclado en vista con ENTER Y BORRAR en local storage

--- a/actividad-register-login-todo-teclado/assets/pages/todo.html
+++ b/actividad-register-login-todo-teclado/assets/pages/todo.html
@@ -16,6 +16,7 @@
                     <span class="bienvenido">Bienvenido</span>
                     <span id='user-name'></span>
                     <button class="list" onclick='irATeclado()'>Añadir nueva lista</button>
+                    <span id='lista'></span>
                 </div>
                 <div class="todo col-md-8 col-lg-8">
                     <span class='titulo'>Lista de tareas del bootcamp</span>
