--- a/21-09-reto1/index.html
+++ b/21-09-reto1/index.html
@@ -9,24 +9,22 @@
 </head>
 <body>
     <main>
-        <div class="contenedor">
+        <div class="contenedor retro" id='contenedor'>
             <h3>Reto Ánsalo</h3>
             <div class="letras">
-                <span>Letras : </span>
                 <div id="espacio-letras"></div>
             </div>
             <div class="numeros">
-                <span>Números : </span>
                 <div id="espacio-numeros"></div>
             </div>
             <div class="seleccionador-temas">
                 <div>
                     <label>Activar Tema Retro</label>
-                    <input class="form-check-input ml-1" type="radio" name="retro" id="tema1" value="retro" >
+                    <input class="form-check-input ml-1" type="radio" name="input" id="tema1" value="retro" checked >
                 </div>
                 <div>
                     <span>Tema oscuro</span>
-                    <input class="form-check-input ml-1" type="radio" name="oscuro" id="tema2" value="oscuro">
+                    <input class="form-check-input ml-1" type="radio" name="input" id="tema2" value="oscuro">
                 </div>
             </div>
             <div id="espacio-botones" class="espacio-botones">
@@ -37,6 +35,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="./assets/js/index.js"></script>
 </body>
 </html>
