Se completa la funcionalidad de historial, borrado y borrado de historial

--- a/21-09-reto1/assets/pages/calculadora.html
+++ b/21-09-reto1/assets/pages/calculadora.html
@@ -18,7 +18,8 @@
                 </div>
             </div>
             <div class="historial">
-                <span>HISTORIAL</span>
+                <span class="titulo-historial">HISTORIAL</span>
+                <span id='espacio-para-historial'></span>
             </div>
         </div>
     </main>
