Se trae nombre e imagen de cada pokemon

--- a/rickAndMortyApi copy/index.html
+++ b/rickAndMortyApi copy/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header position-fixed position-fixed-top">
         <header class="bg-dark text-center text-light header-style">
-            Rick And Morty API By @danielMora
+            <h1>Rick And Morty API By @danielMora</h1>
             <ul id='paginacion' class="pagination">
                 
             </ul>
